Set a minimum width for mana symbols to avoid them getting shrunk on smaller devices

--- a/src/app/components/cards/mana-cost/mana-cost.component.scss
+++ b/src/app/components/cards/mana-cost/mana-cost.component.scss
@@ -5,6 +5,7 @@
 img {
   width: 16px;
   height: 16px;
+  min-width: 16px;
   margin: 1px 1px -1px 1px;
   border-radius: 500px;
   box-shadow: -1px 1px 0 rgba(0,0,0,0.85);
